[package]
name = "granulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = { version = "2.0.0", optional = true }
assert2 = { version = "0.3.6", optional = true }
heapless = "0.7.16"
tinyrand = "0.5.0"

[features]
default = ["no_std"]
no_std = ["micromath"]
std = ["assert2"]