[package]
name = "granulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = { version = "2.0.0", optional = true }
heapless = "0.7.16"
oorandom = "11.1.3"
num-traits = { version = "0.2.15", default-features = false }

[features]
default = ["no_std"]
no_std = ["micromath"]
std = []